# poc-inside-out-objects

./: CMakeLists.txt  README.md  benchmark.out
scripts/: generate_benchmark_table.py
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp
src/cpioo/: managed_entity.cpp  managed_entity.hpp  thread_safe_queue.hpp  version.cpp  version.hpp
t/: 001_version.t.cpp  002_managed_array.t.cpp  003_deeply_nested.t.cpp  CMakeLists.txt
